--- a/tela3.html
+++ b/tela3.html
@@ -81,7 +81,8 @@
             </div>
             <br>
             <br>
-                <input type="submit" name="submit" id="submit1" value="Salvar">
+            <button type="submit" class="button-16" role="button">Salvar</button>
+            <button class="button-16" type="button" role="button" onclick="window.location='tela1.html'">Cancelar</button>
         </fieldset>
     </form>
 </div>
