--- a/tela2.html
+++ b/tela2.html
@@ -82,7 +82,8 @@
             </div>
             <br>
             <br>
-                <input type="submit" name="submit" id="submit" value="Salvar">
+                <button type="submit" class="button-16" role="button">Salvar</button>
+                <button class="button-16" type="button" role="button" onclick="window.location='tela1.html'">Cancelar</button>
         </fieldset>
     </form>
 </div>
